--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,9 @@ jobs:
       - name: Build
         run: npm run build
 
+      - name: Listar archivos en el workspace
+        run: ls -la
+
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v4
         with:
